k8s/base/akhq/akhq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: akhq
  namespace: kafka
spec:
  selector:
    app: akhq
  ports:
    - protocol: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
