k8s/base/akhq/akhq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: akhq-ingress
  namespace: kafka
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: akhq.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: akhq
                port:
                  number: 8080
